syntax = "proto2";

import "utils/matrix.proto";
import "groups/magnetic_space_group.proto";
import "groups/kvector.proto";
import "groups/irrep.proto";
import "groups/compatibility_relations.proto";

package magnon.groups;

// GroupSubgroupRelation represents a magnetic space group that was obtained
// via the application of perturbations to a magnetic space (super)group.
message GroupSubgroupRelation {
    // The magnetic space group number of the supergroup.
    optional string supergroup_number = 1;

    optional string subgroup_number = 2;
    // Standard general positions of the base MSG which are unbroken by the perturbation.

    optional GeneralPositions unbroken_standard_general_positions = 5;

    // In general, the standard translations and origin of the subgroup do not match
    // those of the supergroup. The two standard bases are related by this field.
    optional magnon.utils.Matrix4d supergroup_from_subgroup_standard_basis = 3;

    // A human-readable description of perturbations that induce the subgroup
    // from supergroup.
    // Note: each entry on its own should describe the complete perturbation
    // necessary to induce the subgroup. I.e., different entries provide
    // alternative recipies for the obtaining the subgroup.
    //
    // Example:
    // "B field \perb [100] and  strain \parallel [101]"
    //
    repeated string perturbation_prescription = 4;

    // IrrepRelation describes
    //
    //      * How the k-vectors in the supergroup and in the subgroup are related, and
    //
    //      * How the supergroup irreps on these k-vectors are decomposed into
    //        irreps of the subgroup at the corresponding subgroup k-vectors.
    //
    // Remember that the mapping from supergroup k-vector to subgroup k-vector is 1-to-many.
    //
    message IrrepRelation {
        optional KVector supergroup_kvector = 1;

        message SubgroupKVectorDecompositions {
            // The subgroup k-vector equivalent to the supergroup k-vector
            optional KVector subgroup_kvector = 1;

            // The supergroup element which acts on the supergroup k-vector to make it
            // equal to the subgroup k-vector.
            optional GeneralPosition action_on_supergroup_kvector = 2;

            repeated IrrepDecomposition decomposition = 3;
        }

        repeated SubgroupKVectorDecompositions subgroup_kvector_decompositions = 2;
    }

    repeated IrrepRelation irrep_relation = 6;
}
